--- a/BinaryHeap/BinaryHeap/BinaryHeap.csproj
+++ b/BinaryHeap/BinaryHeap/BinaryHeap.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BinaryHeap.cs" />
     <Compile Include="MaxBinaryHeap.cs" />
+    <Compile Include="MinBinaryHeap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
